# brief

./: Cargo.toml  README.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
src/mail/: address.rs  header.rs  mailbox.rs  message.rs  mod.rs  validation.rs
